style: fixed chart spacing

--- a/public/style.css
+++ b/public/style.css
@@ -251,13 +251,19 @@ li {
 .dashboard-item-text {
   text-align: left;
 }
+
+.dashboard-item-bullets {
+  display: flex;
+  text-align: left;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 30%;
+}
+
 #transcript-button {
   margin-top: 10px;
 }
 
-ol {
-  text-align: left;
-}
 /* ------------------------
    About Podium / Home Page
 ------------------------ */
@@ -397,12 +403,25 @@ Error Page
 ------------------------ */
 .sentiment-rate-details {
   display: flex;
-  padding: 8px;
+  text-align: left;
+  padding-left: 30%;
   justify-content: stretch;
   align-items: center;
+  padding-top: 5%;
+}
+
+.sentiment-rate-details-speech {
+  display: flex;
+  text-align: left;
+  padding-left: 15%;
+  justify-content: stretch;
+  align-items: center;
+  padding-top: 5%;
 }
 
 .sentiment-color-detail {
   align-items: center;
   margin-right: 10px;
 }
+
+.sentiment;
